<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="25dp"
    android:paddingEnd="25dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/hey_there"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/welcome_back"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtPhone"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:autofillHints="phone"
        android:background="@drawable/edt_background"
        android:drawableStart="@drawable/outline_call_24"
        android:drawablePadding="10dp"
        android:hint="@string/phone"
        android:inputType="phone"
        android:padding="15dp"
        android:textColor="#404040"
        android:textColorHint="#404040"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:autofillHints="password"
        android:background="@drawable/edt_background"
        android:drawableStart="@drawable/outline_lock_24"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="#404040"
        android:textColorHint="#404040"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/forgot_your_password"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogIn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_background"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/or_continue_with"
        android:textColor="@color/white"
        android:textSize="13sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bg2"
            android:drawableStart="@drawable/ic_facebook"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/facebook"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="3dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bg2"
            android:drawableStart="@drawable/ic_google"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/google"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/don_t_have_an_account_yet_register"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>