<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:liftOnScroll="true"
            app:liftOnScrollTargetViewId="@id/scrollView">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/mToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                android:elevation="3dp"
                app:layout_scrollEffect="compress"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                app:navigationIcon="@drawable/baseline_arrow_back_24" />

        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".activities.CategoryFullscreenActivity">

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.github.chrisbanes.photoview.PhotoView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:scaleType="fitXY"
                        tools:ignore="MissingClass" />

                    <com.google.android.material.divider.MaterialDivider
                        style="?attr/materialDividerStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/giftName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:textAlignment="textStart"
                        android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                        app:fontFamily="sans-serif-medium" />

                    <com.google.android.material.divider.MaterialDivider
                        style="?attr/materialDividerStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:text="@string/rupee_symbol"
                            android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
                            android:textStyle="bold"
                            app:fontFamily="sans-serif-medium" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/giftPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
                            android:textStyle="bold"
                            app:fontFamily="sans-serif-medium" />

                    </LinearLayout>

                    <com.google.android.material.divider.MaterialDivider
                        style="?attr/materialDividerHeavyStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/product_details"
                        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                        app:fontFamily="sans-serif-medium" />

                    <com.google.android.material.divider.MaterialDivider
                        style="?attr/materialDividerStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/giftDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                        app:fontFamily="sans-serif-medium" />

                </LinearLayout>

            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="?attr/colorSurface"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="1">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/wishListButton"
                    style="?attr/materialIconButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/wishlist"
                    app:icon="@drawable/baseline_favorite_border_24"
                    app:iconGravity="textStart"
                    android:layout_marginLeft="10dp"
                    app:iconPadding="8dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cartButton"
                    style="?attr/materialIconButtonFilledStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/add_to_cart"
                    app:icon="@drawable/baseline_add_shopping_cart_24"
                    app:iconGravity="textStart"
                    app:iconPadding="8dp" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>